Add python dependency with minimum version

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ test:
     - pythonradex.helpers
     - pythonradex.molecule
   requires:
+    - python {{ python_min }}
     - pip
     - pytest
   source_files:
